# netflow_generator

./: Cargo.toml  Dockerfile  README.md  RELEASES.md
.github/workflows/: ci.yml  release.yml
examples/: ipfix_sample.yaml  multi_flow.yaml  v5_sample.yaml  v7_sample.yaml  v9_sample.yaml
src/: cli.rs  error.rs  main.rs  template_cache.rs
src/config/: mod.rs  parser.rs  schema.rs  validator.rs
src/generator/: field_serializer.rs  ipfix.rs  mod.rs  samples.rs  v5.rs  v7.rs  v9.rs  validation.rs
src/transmitter/: mod.rs  udp.rs
