[package]
authors = ["michael.mileusnich@gmail.com"]
categories = ["encoding", "network-programming",]
description = "Generator for Netflow Cisco V5, V7, V9, IPFIX"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "netflow_generator"
repository = "https://github.com/mikemiles-dev/netflow_generator/"
readme = "README.md"
version = "0.2.4"

[dependencies]
netflow_parser = "0.8.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.42", features = ["net", "rt"] }
thiserror = "2.0"
pcap-file = "2.0"
rayon = "1.10"
ctrlc = "3.4"
